# Snowflake

src/decision_igvc/launch/: gps_decision.launch  gps_manager.launch
src/decision_igvc2018/: CMakeLists.txt  package.xml
src/decision_igvc2018/include/: ConeAvoider.h  ConeLineAvoider.h  HoleTrackerDecision.h  HoleTrackerNode.h  LineAvoider.h
src/decision_igvc2018/src/: ConeAvoider.cpp  HoleTrackerDecision.cpp  LineAvoider.cpp
src/reactive_igvc2018/: CMakeLists.txt  package.xml
src/reactive_igvc2018/include/: ConeAvoider.h  ConeLineAvoider.h  HoleTrackerDecision.h  HoleTrackerNode.h  LineAvoider.h  LinearAlgebra.h  MotionController.h  ObstacleManager.h  ReactiveDecisionNode.h
src/reactive_igvc2018/launch/: reactive_decision.launch
src/reactive_igvc2018/src/: ConeAvoider.cpp  ConeLineAvoider.cpp  HoleTrackerDecision.cpp  HoleTrackerNode.cpp  LineAvoider.cpp  MotionController.cpp  ObstacleManager.cpp  ReactiveDecisionNode.cpp  reactive_decision_node.cpp
src/sb_gazebo/urdf/: elsax.gazebo
src/sb_laserscan_processing/launch/: cone_extractor.launch
src/sb_utils/include/: RvizUtils.h
src/vision/: CMakeLists.txt
src/vision/include/: HSVFilterNode.h  PCLTransform.h  PCLTransformNode.h
src/vision/src/: PCLTransform.cpp  pcl_transform.cpp
src/web_interface/: package-lock.json  package.json
src/web_interface/public/: index.html
src/web_interface/src/: constants.js  index.js  routes.js  store.js
src/web_interface/src/actions/: index.js
src/web_interface/src/components/: app-logo.js  app.js  main.js
src/web_interface/src/components/common/: info-bar.js  video-feed.js  xbox-controller.js
src/web_interface/src/components/home/: index.js
src/web_interface/src/components/layout/: footer.js  header.js
src/web_interface/src/components/visualizer/: index.js  nav2d.js  ros2d.js
src/web_interface/src/feathers/: index.js  reduxify-auth.js  reduxify.js
src/web_interface/src/middleware/: index.js  logger.js  snapshot.js
src/web_interface/src/reducers/: index.js  modals-reducer.js
src/web_interface/src/styles/: bootstrap.css  visualizer.css  visualizer.css.map  visualizer.sass
src/web_interface/src/styles/.sass-cache/031c8371a82f37146f258c869501875cc4124b9f/: _alerts.scssc  _background-variant.scssc  _border-radius.scssc  _buttons.scssc  _center-block.scssc  _clearfix.scssc  _forms.scssc  _gradients.scssc  _grid-framework.scssc  _grid.scssc  _hide-text.scssc  _image.scssc  _labels.scssc  _list-group.scssc  _nav-divider.scssc  _nav-vertical-align.scssc  _opacity.scssc  _pagination.scssc  _panels.scssc  _progress-bar.scssc  _reset-filter.scssc  _reset-text.scssc  _resize.scssc  _responsive-visibility.scssc  _size.scssc  _tab-focus.scssc  _table-row.scssc  _text-emphasis.scssc  _text-overflow.scssc  _vendor-prefixes.scssc
src/web_interface/src/styles/.sass-cache/0cf2207d6719bfcfc4b44ae41e439ff94b455bb0/: _dimmer.sassc
src/web_interface/src/styles/.sass-cache/156f2b03c04f252724280fdfbd72a1b82eac8e49/: _global.sassc  _home.sassc  _login.sassc  _remote.sassc
src/web_interface/src/styles/.sass-cache/16bfb41eef4190cbe916779f9b0d85c69ce8b602/: hsc.sassc
src/web_interface/src/styles/.sass-cache/1f7cd7409b05bea26f6dbc34f5a9663bf7f74eaf/: _alerts.scssc  _background-variant.scssc  _border-radius.scssc  _buttons.scssc  _center-block.scssc  _clearfix.scssc  _forms.scssc  _gradients.scssc  _grid-framework.scssc  _grid.scssc  _hide-text.scssc  _image.scssc  _labels.scssc  _list-group.scssc  _nav-divider.scssc  _nav-vertical-align.scssc  _opacity.scssc  _pagination.scssc  _panels.scssc  _progress-bar.scssc  _reset-filter.scssc  _reset-text.scssc  _resize.scssc  _responsive-visibility.scssc  _size.scssc  _tab-focus.scssc  _table-row.scssc  _text-emphasis.scssc  _text-overflow.scssc  _vendor-prefixes.scssc
src/web_interface/src/styles/bootstrap/: _button-groups.scss  _forms.scss  _variables.scss
src/web_interface/src/styles/visualizer/: _home.sass
(+90 files in other folders)
